Add swagger annotation on login handler
