# docs/swagger.yaml
@@ -1,5 +1,12 @@
 basePath: /
 definitions:
+  model.Authentication:
+    properties:
+      email:
+        type: string
+      password:
+        type: string
+    type: object
   model.Cafe:
     properties:
       address:
@@ -47,6 +54,38 @@ info:
   title: Cafe Inventory Management API
   version: "1.0"
 paths:
+  /api/v1/auth/login:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: Login payload
+        in: body
+        name: login
+        required: true
+        schema:
+          $ref: '#/definitions/model.Authentication'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            properties:
+              token:
+                type: string
+            type: object
+        "400":
+          description: invalid request body
+          schema:
+            type: string
+        "401":
+          description: invalid credential or inactive user
+          schema:
+            type: string
+      summary: Login
+      tags:
+      - Authentication
   /api/v1/cafes:
     get:
       consumes:
@@ -175,7 +214,7 @@ paths:
           description: internal server error
           schema:
             type: string
-      summary: get a cafe by id
+      summary: Get a cafe by id
       tags:
       - cafes
     patch:
